--- a/views/home.pug
+++ b/views/home.pug
@@ -2,4 +2,6 @@ extend layouts/main
 
 block content 
     .videos
-        h1 Video
+        each item in videos
+            h1= item.title
+            p= item.description
