#2.22 Home Controller part Two

--- a/views/home.pug
+++ b/views/home.pug
@@ -1,7 +1,7 @@
 extend layouts/main
+include mixins/videoBlock
 
 block content 
     .videos
         each item in videos
-            h1= item.title
-            p= item.description
+            +videoBlock(item)
