--- a/views/search.pug
+++ b/views/search.pug
@@ -1,5 +1,8 @@
 extend layouts/main
-
+include mixins/videoBlock
 block content 
     .search__header
         h3 Searching by #{searchingBy}
+    .search__videos 
+        each item in videos
+            +videoBlock(item)
