--- a/views/home.pug
+++ b/views/home.pug
@@ -4,4 +4,9 @@ include mixins/videoBlock
 block content 
     .videos
         each item in videos
-            +videoBlock(item)
+            +videoBlock({
+                id:item.id,
+                title:item.title,
+                views:item.views,
+                videoFile:item.fileUrl
+            })
