--- a/views/search.pug
+++ b/views/search.pug
@@ -4,5 +4,12 @@ block content
     .search__header
         h3 Searching by #{searchingBy}
     .search__videos 
+        if videos.length === 0
+            h5 No Videos Found
         each item in videos
-            +videoBlock(item)
+            +videoBlock({
+                id:item.id,
+                title:item.title,
+                views:item.views,
+                videoFile:item.fileUrl
+            })
