--- a/views/userDetail.pug
+++ b/views/userDetail.pug
@@ -3,5 +3,5 @@ extend layouts/main
 block content 
     .user-profile
         .user-profile__header
-            img.avatar(src=loggedUser.avatarUrl)
-            h4.profile__username=loggedUser.name
+            img.avatar(src=user.avatarUrl)
+            h4.profile__username=user.name
