#9.0 Starting the Video Player

--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -1,14 +1,17 @@
 extend layouts/main
+include mixins/videoPlayer
 
 block content 
     .video-detail__container
-        .video__player 
-            video(src=`/${video.fileUrl}`, controls=true)
+        //- .video__player 
+        //-     video(src=`/${video.fileUrl}`, controls=true)
+        +videoPlayer({
+            src:video.fileUrl
+        })
         .video__info 
-            if loggedUser
-                if video.creator.id === loggedUser.id
-                    a(href=routes.editVideo(video.id))
-                        button Edit Video
+            if loggedUser && video.creator.id === loggedUser.id
+                a(href=routes.editVideo(video.id))
+                    button Edit Video
             h5.video__title=video.title
             p.video__description=video.description
             if video.views === 1
@@ -23,5 +26,3 @@ block content
                 span.video__comment-number 1 comment
             else
                 span.video__comment-number #{video.comments.length} comments
-
-        
