--- a/views/mixins/videoPlayer.pug
+++ b/views/mixins/videoPlayer.pug
@@ -1,5 +1,6 @@
 mixin videoPlayer (video = {})
-    .videoPlayer
+    .videoPlayer#jsVideoPlayer
+        //- video(src=`/${video.src}`, autoplay, muted)
         video(src=`/${video.src}`)
         .videoPlayer__controls 
             .videoPlayer__column 
@@ -8,7 +9,7 @@ mixin videoPlayer (video = {})
                 span
                     |00:00 / 10:00
             .videoPlayer__column 
-                span 
+                span#jsPlayButton 
                     i.fas.fa-play
             .videoPlayer__column 
                 span 
