--- a/views/mixins/videoPlayer.pug
+++ b/views/mixins/videoPlayer.pug
@@ -4,7 +4,7 @@ mixin videoPlayer (video = {})
         video(src=`/${video.src}`)
         .videoPlayer__controls 
             .videoPlayer__column 
-                span 
+                span#jsVolumnBtn
                     i.fas.fa-volume-up
                 span
                     |00:00 / 10:00
