--- a/views/mixins/videoPlayer.pug
+++ b/views/mixins/videoPlayer.pug
@@ -12,5 +12,5 @@ mixin videoPlayer (video = {})
                 span#jsPlayButton 
                     i.fas.fa-play
             .videoPlayer__column 
-                span 
+                span#jsFullScreen
                     i.fas.fa-expand
